[package]
name = "ramos"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ramos meme os"]
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
uefi = { version = "0.26", default-features = false, features = ["alloc", "logger", "panic_handler"] }
uefi-services = "0.23"
linked_list_allocator = "0.10"
log = { version = "0.4", default-features = false }
spin = "0.9"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
